<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/preference_title">

    <PreferenceCategory
        android:title="@string/preference_readingsetting">

        <ListPreference
            android:dialogTitle="@string/preference_pic"
            android:defaultValue="1"
            android:entries="@array/pic_text"
            android:entryValues="@array/pic_value"
            android:key="picDS"
            android:summary="@string/preference_pic_sum"
            android:title="@string/preference_pic_title">
        </ListPreference>


    </PreferenceCategory>

    <PreferenceCategory
        android:title="回复设置">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="isBackWord"
            android:summaryOff="不使用"
            android:summaryOn="使用"
            android:title="是否使用手机版专用签名" >

        </CheckBoxPreference>

        <EditTextPreference
            android:defaultValue="发送自 我的Android客户端 by ${model}"
            android:key="backWords"
            android:title="手机版专用签名"
            android:summary="点击输入"
            android:dialogTitle="专用签名设置"
            />

    </PreferenceCategory>
    <PreferenceCategory
        android:title="其他相关设置">


    <ListPreference
        android:dialogTitle="选择检查新邮件的间隔"
        android:defaultValue="300"
        android:entries="@array/newmail_text"
        android:entryValues="@array/newmail_value"
        android:key="newmail"
        android:summary="设置检查邮件的时间间隔"
        android:title="邮件提醒(需重启)" >
    </ListPreference>

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="isChange"
            android:summaryOff="随重力方向改变屏幕方向"
            android:summaryOn="一直竖屏"
            android:title="保持竖屏(需重启)" >
        </CheckBoxPreference>

    </PreferenceCategory>


</PreferenceScreen>