<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="debaod.topswim.SearchPage">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:textSize="15sp"
            android:gravity="center_horizontal"
            android:textColor="#ff121212"
            android:layout_marginStart="6dp"
            android:layout_marginTop="5dp"
            android:text="@string/search_keyword"
            />
        <EditText
            android:id="@+id/search_keyword"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:textSize="15sp"
            android:gravity="center_horizontal"
            android:layout_marginStart="6dp"
            android:layout_marginTop="5dp"
            android:hint="@string/search_hint_keyword"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:textSize="15sp"
            android:gravity="center_horizontal"
            android:textColor="#ff121212"
            android:layout_marginStart="6dp"
            android:layout_marginTop="5dp"
            android:text="@string/search_user"
            />
        <EditText
            android:id="@+id/search_username"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:textSize="15sp"
            android:gravity="center_horizontal"
            android:layout_marginStart="6dp"
            android:layout_marginTop="5dp"
            android:hint="@string/search_hint_user"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:textSize="15sp"
            android:gravity="center_horizontal"
            android:textColor="#ff121212"
            android:layout_marginStart="6dp"
            android:layout_marginTop="5dp"
            android:text="@string/search_forum_range"
            />
        <Spinner
            android:id="@+id/search_forum_spinner"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:gravity="center_horizontal"
            android:layout_marginStart="6dp"
            android:layout_marginTop="5dp">
            </Spinner >
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:textSize="15sp"
            android:gravity="center_horizontal"
            android:textColor="#ff121212"
            android:layout_marginStart="6dp"
            android:layout_marginTop="5dp"
            android:text="@string/search_time_range_begin"
            />
        <EditText
            android:id="@+id/search_time_range"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:gravity="center_horizontal"
            android:textSize="15sp"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginTop="5dp">
        </EditText >
        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:textSize="15sp"
            android:gravity="center_horizontal"
            android:textColor="#ff121212"
            android:layout_marginEnd="6dp"
            android:layout_marginTop="5dp"
            android:text="@string/search_time_range_end" />
    </LinearLayout>
    <Button
        android:id="@+id/search_btn"
        android:layout_marginTop="40dp"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:text="@string/search_btn"
        android:background="@drawable/login_button"
        android:layout_gravity="center_horizontal"
        />

</LinearLayout>
