<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/edlg_title"
        />


    <EditText
        android:id="@+id/edt_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/edlg_text"
        />

    <EditText
        android:id="@+id/edt_cont"
        android:layout_width="fill_parent"
        android:layout_height="185dp"
        android:gravity="top"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/edlg_text"
        android:inputType="textMultiLine" >
        <requestFocus />
    </EditText>
    <Button
        android:id="@+id/edt_btn"
        android:clickable="false"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="10dp"
        android:text="@string/edlg_button"
        />

</LinearLayout>